--- a/cloudform-om-config.html.md.erb
+++ b/cloudform-om-config.html.md.erb
@@ -19,7 +19,7 @@ After you complete this procedure, follow the instructions in the [Deploying Ela
 
 ## <a id='access-om'></a>Step 2: Access Ops Manager ##
 
-<p class="note"><strong>Note</strong>: Ops Manager 1.7 security features require that you log in using a fully qualified domain name to access Ops Manager.</a></p> 
+<p class="note"><strong>Note</strong>: Ops Manager security features require that you log in using a fully qualified domain name to access Ops Manager.</a></p> 
 
 1. In a web browser, navigate to the fully qualified domain you created in the [Create a DNS Entry](./cloudform-om-deploy.html#create-dns) step of [Launching an Ops Manager Director Instance on AWS](./cloudform-om-deploy.html).
 
@@ -31,16 +31,42 @@ After you complete this procedure, follow the instructions in the [Deploying Ela
 
 ### <a id='idp'></a>Use an Identity Provider ###
 
-1.  Log in to your identity provider and use the information below to configure SAML Service Provider Properties:
-    * Service Provider Entity ID: opsman-login
-    * ACS URL : https:<span>//<span>OPS-MANAGER-FQDN/uaa/saml/SSO/alias/opsman-login
-    * Binding : HTTP Post
-    * SLO URL: https:<span>//<span/>OPS-MANAGER-FQDN/uaa/saml/SingleLogout/alias/opsman-login
-    * Binding : HTTP Redirect
-    * Name ID : Email Address
+#### Configure your Identity Provider ####
 
-1. When redirected to the **Use an Identity Provider** page, you must complete the following steps:
-    * Retrieve the metadata URL from your Identity Provider and copy it into the **Use an Identity Provider** area. 
+1. Log in to your identity provider. In this example, we are using Okta as our identity provider.
+
+1. Once you have logged in, click **Add Application**.  
+    <%= image_tag("add_app.png") %>
+
+1. Select the SAML 2.0 radio button and click **Create**.
+    <%= image_tag("select_saml.png") %>
+
+1. In **Edit SAML Integration** >> **General Settings**, create an Ops Manager application. In **App name**, enter Ops Manager. If necessary, configure the **App logo** and visibility. 
+    <%= image_tag("create_app.png") %> 
+
+1. In **Edit SAML Integration** >> **Configure SAML**, enter values in the following fields:
+    * **Single sign on URL**: `https://{OPS-MAN-FQDN}:443/uaa/saml/SSO/alias/{OPS-MAN-FQDN}` 
+    * **Audience URI (SP Entity ID)**: `https://{OPS-MAN-FQDN}:443/uaa/saml/SSO/alias/{OPS-MAN-FQDN}`
+
+    <%= image_tag("edit_saml.png") %> 
+
+1. Open the newly created Ops Manager application.
+
+1. Under the **Sign On** nav, copy the **Identity Provider meta**. 
+
+    <%= image_tag("copy_meta.png") %> 
+
+1. (Optional) If you are using BOSH IDP Metadata, follow the same steps above and enter values specific for BOSH:
+    * **App Name**: Enter BOSH. 
+    * **Single sign on URL**: `https://{BOSH-IP}:443/uaa/saml/SSO/alias/{OP-MAN-FQDN}`
+    * **Audience URI (SP Entity ID)**: `https://{OP-MAN-FQDN}:443/uaa`
+
+1. Return to the Ops Manager **Use an Identity Provider** log in page. 
+
+#### Log in to Ops Manager using your IDP Metadata ####
+
+1. In the Ops Manager **Use an Identity Provider** log in page, complete the following steps:
+    * Paste the metadata you retrieved from your IDP above. 
     * Create a passphrase. Ops Manager encrypts data using the passphrase that you provide.
     * Read the **End User License Agreement**, and select the checkbox to accept the terms.
     * Click **Setup Authentication**.
