formatting and subnav fixes[#127836849]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -20,13 +20,13 @@ Manager API documentation, browse to `https://YOUR-OPS-MANAGER-FQDN/docs`.
 
 * <a href="./cloudform-om-config.html">Configuring Ops Manager Director for AWS</a>
 
-* <a href="./cloudform-om-ebs-config.html">Configuring Amazon EBS Encryption</a>
+* <a href="./cloudform-om-ebs-config.html" class="subnav">Configuring Amazon EBS Encryption</a>
 
 * <a href="./vsphere-config.html">Configuring Ops Manager Director for VMware vSphere</a>
 
 * <a href="./vchs-vcloud-config.html">Configuring Ops Manager Director for vCloud Air and vCloud</a>
 
-* <a href="./opsmanager-create-bosh-client.html">Creating UAA Clients for BOSH Director</a>
+* <a href="./opsmanager-create-bosh-client.html" class="subnav">Creating UAA Clients for BOSH Director</a>
 
 * <a href="./openstack-om-config.html">Configuring Ops Manager Director for OpenStack</a>
 
@@ -58,7 +58,7 @@ Manager API documentation, browse to `https://YOUR-OPS-MANAGER-FQDN/docs`.
 
 * <a href="./upgrading-pcf.html" class="subnav">Upgrading Pivotal Cloud Foundry</a>
 
-* <a href="./cloudform_elb_ssh_proxy.html">Creating a Proxy ELB for Diego SSH without CloudFormation</a>
+* <a href="./cloudform_elb_ssh_proxy.html" class="subnav">Creating a Proxy ELB for Diego SSH without CloudFormation</a>
 
 * <a href="./upgrading-products.html" class="subnav">Upgrading Elastic Runtime and Other Pivotal Cloud Foundry Products</a>
 
