--- a/opsmanager-create-bosh-client.html.md.erb
+++ b/opsmanager-create-bosh-client.html.md.erb
@@ -19,17 +19,21 @@ The UAAC client is installed on the Ops Manager virtual machine. Log in to the O
     Password: ***********
   </pre>
 
-1. Navigate to the Ops Manager **Installation Dashboard** >> **Status** and copy the **Ops Manager Director** IP address. Target the UAA on the Director VM using the IP address.The root certificate is also available at <code>http<span>s</span>://ops-manager/api/v0/security/root/_ca/_certificate/api/v0/security/root/_ca/_certificate</code>.
-  <pre class='terminal'>
+1. Navigate to the Ops Manager **Installation Dashboard** >> **Status** and copy the **Ops Manager Director** IP address. Target the UAA on the Director VM using the IP address. The root certificate is also available at the following endpoint:
+
+    `https://ops-manager/api/v0/security/root_ca_certificate</api/v0/security/root_ca_certificate.`
+
+    <pre class='terminal'>
     $ uaac target http<span>s</span>://director-ip:8443 --ca-cert \
     /var/tempest/workspaces/default/root_ca_certificate
 
     Target: http<span>s</span>://10.85.16.4:8443
-  </pre>
+    </pre>
 
-1. Log in to the UAA and get the owner token. Find the UAA password for the login user at <code>http<span>s</span>://<FQDN>/api/v0/deployed/director/credentials/uaa_login_client_credentials</code>.
+1. Log in to the UAA and get the owner token. Find the UAA password for the login user at `https://<FQDN>/api/v0/deployed/director/credentials/uaa_login_client_credentials
+    `
 
-	<pre class='terminal'>
+	 <pre class='terminal'>
     $ uaac token owner get login -s <PasswordForUAALoginUser>
     User name:  admin
   	Password:  ********************
@@ -37,24 +41,24 @@ The UAAC client is installed on the Ops Manager virtual machine. Log in to the O
   	Successfully fetched token via owner password grant.
   	Target: http<span>s</span>://10.85.16.4:8443
   	Context: admin, from client login
-  </pre>
+    </pre>
 
 1. Create a new UAA Client with `bosh admin` privileges.
 
-  	<pre class='terminal'>
-  	$ uaac client add ci --authorized_grant_types client_credentials \
-  	--authorities bosh.admin --secret a_secret_i_made_up
+    <pre class='terminal'>
+    $ uaac client add ci --authorized_grant_types client_credentials \
+    --authorities bosh.admin --secret CREATE-A-SECRET
 
-   	  scope: uaa.none
-    	client_id: ci
-    	resource_ids: none
-    	authorized_grant_types: client_credentials
-    	autoapprove:
-    	action: none
-    	authorities: bosh.admin
-    	name: ci
-    	lastmodified: 1469727130702
-    	id: ci
+    scope: uaa.none
+    client_id: ci
+    resource_ids: none
+    authorized_grant_types: client_credentials
+    autoapprove:
+    action: none
+    authorities: bosh.admin
+    name: ci
+    lastmodified: 1469727130702
+    id: ci
     </pre>
 
 1. Set the client and secret as environment variables on the VM.
@@ -64,11 +68,11 @@ The UAAC client is installed on the Ops Manager virtual machine. Log in to the O
   	$ ubuntu@ip-10-0-0-12:~$ export BOSH_CLIENT_SECRET=cipassword
 	</pre>
 
-1. Target BOSH using the client.
+1. Target BOSH using the client, using the **Ops Manager Director** IP address you obtained above.
 	
 	<pre class='terminal'>
   	$ bosh --ca-cert /var/tempest/workspaces/default/root_ca_certificate \
-  	target "${BOSH_DIRECTOR_IP}"
+  	target "${OPS_MANAGER_DIRECTOR_IP}"
 	</pre>
 
 
