adds new saml log in instructions[#128033843]

--- a/cloudform-om-config.html.md.erb
+++ b/cloudform-om-config.html.md.erb
@@ -29,25 +29,9 @@ After you complete this procedure, follow the instructions in the [Deploying Ela
 
     <%= image_tag("select-authentication.png") %>
 
-### <a id='idp'></a>Use an Identity Provider ###
+### <a id='idp'></a>Use an Identity Provider (IdP) ###
 
-1.  Log in to your identity provider and use the information below to configure SAML Service Provider Properties:
-    * Service Provider Entity ID: opsman-login
-    * ACS URL : https:<span>//<span>OPS-MANAGER-FQDN/uaa/saml/SSO/alias/opsman-login
-    * Binding : HTTP Post
-    * SLO URL: https:<span>//<span/>OPS-MANAGER-FQDN/uaa/saml/SingleLogout/alias/opsman-login
-    * Binding : HTTP Redirect
-    * Name ID : Email Address
-
-1. When redirected to the **Use an Identity Provider** page, you must complete the following steps:
-    * Retrieve the metadata URL from your Identity Provider and copy it into the **Use an Identity Provider** area. 
-    * Create a passphrase. Ops Manager encrypts data using the passphrase that you provide.
-    * Read the **End User License Agreement**, and select the checkbox to accept the terms.
-    * Click **Setup Authentication**.
-
-    <%= image_tag("meta-url.png") %>
-
-1. Your Identity Provider login page appears. Enter your username and password. Click **Login**.
+<%= partial 'using_idp_ops_manager' %> 
 
 ### <a id='internal'></a>Internal Authentication ###
 
