--- a/openstack-om-config.html.md.erb
+++ b/openstack-om-config.html.md.erb
@@ -29,25 +29,7 @@ topic.
 
 ### <a id='idp'></a>Use an Identity Provider ###
 
-1.  Log in to your identity provider and use the information below to configure SAML Service Provider Properties:
-    * Service Provider Entity ID: opsman-login
-    * ACS URL : https:<span>//<span>OPS-MANAGER-FQDN/uaa/saml/SSO/alias/opsman-login
-    * Binding : HTTP Post
-    * SLO URL: https:<span>//<span/>OPS-MANAGER-FQDN/uaa/saml/SingleLogout/alias/opsman-login
-    * Binding : HTTP Redirect
-    * Name ID : Email Address
-
-1. When redirected to the **Use an Identity Provider** page, you must complete the following steps:
-    * Retrieve the metadata URL from your Identity Provider and copy it into the **Use an Identity Provider** area.
-    * Create a passphrase. Ops Manager encrypts data using the passphrase that you provide.
-    * Read the **End User License Agreement**, and select the checkbox to accept the terms.
-    * Click **Setup Authentication**.
-
-    <%= image_tag("meta-url.png") %>
-
-1. Enter a **Username** and a **Password**.
-
-1. Read the **End User License Agreement**, and select the checkbox to accept.
+<%= partial 'using_idp_ops_manager' %> 
 
 ### <a id='internal'></a>Use Internal Authentication ###
 
