--- a/pcf-director-proxy-settings.html.md.erb
+++ b/pcf-director-proxy-settings.html.md.erb
@@ -1,26 +1,46 @@
 ---
-title: Configuring Proxy Settings for BOSH CPI
+title: Configuring Proxy Settings for the BOSH CPI
 owner: Ops Manager
 ---
 
 <strong><%= modified_date %></strong>
 
-This topic describes the setup and scope of the BOSH CPI Proxy settings found in the setup page.
+This topic describes how to configure proxy settings for the BOSH Cloud Provider Interface (CPI), which is the API that the BOSH Director uses to interact with your IaaS endpoint.
+If you use a proxy to mediate traffic between your BOSH installation and your IaaS endpoint, you must enter your proxy information when Ops Manager starts for the first time.   
 
-## <a id='scope'></a>BOSH Director Proxy Setting Scope ##
+The following diagram illustrates how a proxy mediates HTTP and HTTPS requests between the CPI of the BOSH Director and the IaaS endpoint.
 
-Proxy settings were added to BOSH and Ops Manager to provide a way to proxy http requests from the BOSH CPI to the IaaS endpoints for each IaaS. 
-As of the latest modification of this document — the proxy settings are limited to the BOSH CPI and IaaS endpoints. 
-Proxying blobstore (S3) and database traffic (RDS) from the BOSH director is being considered by the Pivotal platform team as is the proxying of 
-traffic from Pivotal tiles such as Elastic Runtime.
+<%= image_tag('cpi-proxy.png') %>
 
-## <a id='setup-page'></a>Set Up Ops Manager ##
+For more information about BOSH components, see the [BOSH documentation](https://bosh.io/docs/bosh-components.html).
 
-1. When Ops Manager starts for the first time, you must choose one of the following:
-   * [Use an Identity Provider](#idp): If you use an Identity Provider, an external identity server maintains your user database.
-   * [Internal Authentication](#internal): If you use Internal Authentication, PCF maintains your user database.
+<p class='note'><strong>Note</strong>: Pivotal Cloud Foundry (PCF) only supports proxying requests between the BOSH CPI and the IaaS API. It does not support proxying blobstore and database traffic.</p>
+
+## <a id='config'></a>Configure Proxy ##
+
+You configure your proxy for the BOSH CPI when Ops Manager starts for the first time. 
+
+1. Ensure that you have installed your proxy and that it is functioning properly. You can install one proxy for HTTPS requests and another proxy for HTTP requests, or choose to use the same proxy for both kinds of traffic. 
+
+1. Follow the PCF installation instructions for your IaaS. See the [Installing Pivotal Cloud Foundry](../installing/index.html) topic for more information.
+
+1. When Ops Manager starts for the first time, you must select **Use an Identity Provider** or **Internal Authentication**. See the following IaaS-specific topics for more information:
+    * [Configuring Ops Manager Director on AWS](cloudform-om-config.html#access-om)
+    * [Installing Pivotal Cloud Foundry](vsphere.html#paas)
+    * [Configuring Ops Manager Director for OpenStack](openstack-om-config.html#log-in)
+
+1. Both the **Use an Identity Provider** and the **Internal Authentication** login pages include fields for **Http proxy**, **Https proxy**, and **No proxy**. Complete the fields with the following information:
+    * **Https proxy**: Enter the URL for the proxy that handles HTTPS requests between the BOSH CPI and the IaaS API.
+    * **Http proxy**: Enter the URL for the proxy that handles HTTP requests between the BOSH CPI and the IaaS API. If you are using the same proxy to handle both HTTPS and HTTP traffic, enter the same URL as **Https proxy**.
+    * **No proxy**: Enter IP addresses that 
+ 
+choose one of the following:
+   * **Use an Identity Provider**: If you use an Identity Provider, an external identity server maintains your user database.
+   * **Internal Authentication**: If you use Internal Authentication, PCF maintains your user database.
 
      <%= image_tag("select-authentication.png") %>
+      
+
 
 1. For either option you must enter HTTP or HTTPS proxy URLs.
 
