--- a/pcf-director-proxy-settings.html.md.erb
+++ b/pcf-director-proxy-settings.html.md.erb
@@ -16,9 +16,9 @@ For more information about BOSH components, see the [BOSH documentation](https:/
 
 <p class='note'><strong>Note</strong>: Pivotal Cloud Foundry (PCF) only supports proxying requests between the BOSH CPI and the IaaS API. It does not support proxying blobstore and database traffic.</p>
 
-## <a id='config'></a>Configure Proxy ##
+## Configure Proxy ##
 
-You configure your proxy for the BOSH CPI when Ops Manager starts for the first time. 
+Perform the following steps to configure your proxy for the BOSH CPI when Ops Manager starts for the first time: 
 
 1. Ensure that you have installed your proxy and that it is functioning properly. You can install one proxy for HTTPS requests and another proxy for HTTP requests, or choose to use the same proxy for both kinds of traffic. 
 
@@ -26,26 +26,15 @@ You configure your proxy for the BOSH CPI when Ops Manager starts for the first 
 
 1. When Ops Manager starts for the first time, you must select **Use an Identity Provider** or **Internal Authentication**. See the following IaaS-specific topics for more information:
     * [Configuring Ops Manager Director on AWS](cloudform-om-config.html#access-om)
-    * [Installing Pivotal Cloud Foundry](vsphere.html#paas)
+    * [Configuring Ops Manager Director for VMware vSphere](vsphere-config.html#set-up)
+    * [Configuring Ops Manager Director for vCloud Air and vCloud](vchs-vcloud-config.html#set-up)
     * [Configuring Ops Manager Director for OpenStack](openstack-om-config.html#log-in)
 
 1. Both the **Use an Identity Provider** and the **Internal Authentication** login pages include fields for **Http proxy**, **Https proxy**, and **No proxy**. Complete the fields with the following information:
     * **Https proxy**: Enter the URL for the proxy that handles HTTPS requests between the BOSH CPI and the IaaS API.
     * **Http proxy**: Enter the URL for the proxy that handles HTTP requests between the BOSH CPI and the IaaS API. If you are using the same proxy to handle both HTTPS and HTTP traffic, enter the same URL as **Https proxy**.
-    * **No proxy**: Enter IP addresses that 
- 
-choose one of the following:
-   * **Use an Identity Provider**: If you use an Identity Provider, an external identity server maintains your user database.
-   * **Internal Authentication**: If you use Internal Authentication, PCF maintains your user database.
+    * **No proxy**: Enter the following IP addresses:
+      * `127.0.0.1`
+      * The IP address of your BOSH Director. This is the first IP address not in your reserved range. For example, if you enter `10.0.16.0-10.0.16.10` in the **Reserved IP Ranges** field of the **Create Networks** page when configuring the Ops Manager Director, the BOSH Director IP is `10.0.16.11`.
 
-     <%= image_tag("select-authentication.png") %>
-      
-
-
-1. For either option you must enter HTTP or HTTPS proxy URLs.
-
-1. Enter IP addresses that will not be proxied in the No Proxy field including the following:
-   * The BOSH Director IP must be in the **No Proxy** field. The BOSH Director IP will be the first IP that is not in your blocked range. For example, if you enter `10.0.16.0-10.0.16.10` in the **Reserved IP Ranges** field of the networks page, the BOSH Director IP will be `10.0.16.11`.
-   * 127.0.0.1
-
-
+      <p class="note"><strong>Note</strong>: When the BOSH Director talks to other components on its VM, such as the database and the User Account and Authentication (UAA) module, it communicates with them as if they were external. You must enter the BOSH Director IP address in the no-proxy list to prevent traffic from the BOSH Director to other components on the same VM from passing through the proxy.</p> 
